Remove various deprected method calls through out code
Signed-off-by: Jakub Scholz <www@scholzj.com>